--- a/02-HTML-Fundamentals/02-Solution Exercise/index.html
+++ b/02-HTML-Fundamentals/02-Solution Exercise/index.html
@@ -35,5 +35,7 @@
       paragraphs, links, headings, images, video, etc. Web browsers understand
       HTML and render HTML code as websites.
     </p>
+
+    <h3>Why should you learn HTML?</h3>
   </body>
 </html>
