--- a/02-HTML-Fundamentals/02-Solution Exercise/index.html
+++ b/02-HTML-Fundamentals/02-Solution Exercise/index.html
@@ -10,7 +10,12 @@
     <h1>📘 The Code Magazine</h1>
 
     <h2>The Basic Language of the Web: HTML</h2>
-
+    <img
+      src="../02-Requirements/laura-jones.jpg"
+      alt="Laura Jones"
+      width="50"
+      height="50"
+    />
     <p>Posted by <strong> Laura Jones</strong> on Monday, June 21st 2027</p>
     <img
       src="../02-Requirements/post-img.jpg"
