--- a/02-HTML-Fundamentals/02-Solution Exercise/index.html
+++ b/02-HTML-Fundamentals/02-Solution Exercise/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>📘 The Code Magazine</h1>
+    <a href="blog.html">Blog</a>
 
     <h2>The Basic Language of the Web: HTML</h2>
     <img
