--- a/02-HTML-Fundamentals/02-Solution Exercise/index.html
+++ b/02-HTML-Fundamentals/02-Solution Exercise/index.html
@@ -20,19 +20,9 @@
 
     <article>
       <h2>The Basic Language of the Web: HTML</h2>
-      <img
-        src="../02-Requirements/laura-jones.jpg"
-        alt="Laura Jones"
-        width="50"
-        height="50"
-      />
+      <img src="img/laura-jones.jpg" alt="Laura Jones" width="50" height="50" />
       <p>Posted by <strong> Laura Jones</strong> on Monday, June 21st 2027</p>
-      <img
-        src="../02-Requirements/post-img.jpg"
-        alt="Post image"
-        width="500"
-        height="200"
-      />
+      <img src="img/post-img.jpg" alt="Post image" width="500" height="200" />
       <p>
         All modern websites and web applications are built using three
         <em>fundamental</em>
