--- a/02-HTML-Fundamentals/02-Solution Exercise/index.html
+++ b/02-HTML-Fundamentals/02-Solution Exercise/index.html
@@ -78,7 +78,50 @@
       </ul>
       <p>Hopefully you learned something new here. See you next time!</p>
     </article>
+    <aside>
+      <h4>Related posts</h4>
 
+      <ul>
+        <li>
+          <a href="#"
+            ><img
+              src="img/related-1.jpg"
+              alt="Related 1"
+              width="75"
+              height="75"
+            />
+            How to Learn Web Development</a
+          >
+        </li>
+        <p>By Jonas Schmedtmann</p>
+
+        <li>
+          <a href="#"
+            ><img
+              src="img/related-2.jpg"
+              alt="Related 2"
+              width="75"
+              height="75"
+            />
+            The Unknown Powers of CSS</a
+          >
+        </li>
+        <p>By Jim Dillon</p>
+
+        <li>
+          <a href="#"
+            ><img
+              src="img/related-3.jpg"
+              alt="Related 3"
+              width="75"
+              height="75"
+            />
+            Why JavaScript is Awesome</a
+          >
+        </li>
+        <p>By Matilda</p>
+      </ul>
+    </aside>
     <footer>Copyright &copy; 2027 by The Code Magazine.</footer>
   </body>
 </html>
