--- a/02-HTML-Fundamentals/02-Solution Exercise/challenge2.html
+++ b/02-HTML-Fundamentals/02-Solution Exercise/challenge2.html
@@ -6,5 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Challenge-2</title>
   </head>
-  <body></body>
+  <body>
+    <article>
+      <h2>Converse Chuck Taylor All Star Low Top</h2>
+      <img
+        src="https://i.ibb.co/Jr7Wh1d/challenges.jpg"
+        alt="Chuck Taylor All Star Shoe"
+        width="250"
+        height="250"
+      />
+    </article>
+  </body>
 </html>
