--- a/02-HTML-Fundamentals/02-Solution Exercise/index.html
+++ b/02-HTML-Fundamentals/02-Solution Exercise/index.html
@@ -84,23 +84,23 @@
     <aside>
       <h4>Related posts</h4>
 
-      <ul>
+      <ul class="related">
         <li>
           <img src="img/related-1.jpg" alt="Related 1" width="75" height="75" />
           <a href="#"> How to Learn Web Development</a>
-          <p>By Jonas Schmedtmann</p>
+          <p class="related-author">By Jonas Schmedtmann</p>
         </li>
 
         <li>
           <img src="img/related-2.jpg" alt="Related 2" width="75" height="75" />
           <a href="#"> The Unknown Powers of CSS</a>
-          <p>By Jim Dillon</p>
+          <p class="related-author">By Jim Dillon</p>
         </li>
 
         <li>
           <img src="img/related-3.jpg" alt="Related 3" width="75" height="75" />
           <a href="#"> Why JavaScript is Awesome</a>
-          <p>By Matilda</p>
+          <p class="related-author">By Matilda</p>
         </li>
       </ul>
     </aside>
