--- a/02-HTML-Fundamentals/02-Solution Exercise/challenge2.html
+++ b/02-HTML-Fundamentals/02-Solution Exercise/challenge2.html
@@ -8,8 +8,8 @@
     <title>Challenge-2</title>
   </head>
   <body>
-    <article>
-      <h2>Converse Chuck Taylor All Star Low Top</h2>
+    <article class="product">
+      <h2 class="product-title">Converse Chuck Taylor All Star Low Top</h2>
       <img
         src="https://i.ibb.co/Jr7Wh1d/challenges.jpg"
         alt="Chuck Taylor All Star Shoe"
