--- a/02-HTML-Fundamentals/02-Solution Exercise/index.html
+++ b/02-HTML-Fundamentals/02-Solution Exercise/index.html
@@ -20,7 +20,7 @@
     </header>
 
     <article>
-      <h2>The Basic Language of the Web: HTML</h2>
+      <h2 class="article-header">The Basic Language of the Web: HTML</h2>
       <img src="img/laura-jones.jpg" alt="Laura Jones" width="50" height="50" />
       <p id="author">
         Posted by <strong> Laura Jones</strong> on Monday, June 21st 2027
