--- a/02-HTML-Fundamentals/02-Solution Exercise/index.html
+++ b/02-HTML-Fundamentals/02-Solution Exercise/index.html
@@ -37,7 +37,7 @@
         and why you too should learn it.
       </p>
 
-      <h3>What is HTML?</h3>
+      <h3 class="what-HTML">What is HTML?</h3>
       <p>
         HTML stands for <strong>H</strong>yper<strong>T</strong>ext
         <strong>M</strong>arkup <strong>L</strong>anguage. It's a markup
@@ -64,7 +64,7 @@
         >.
       </p>
 
-      <h3>Why should you learn HTML?</h3>
+      <h3 class="learn-HTML">Why should you learn HTML?</h3>
       <p>
         There are countless reasons for learning the fundamental language of the
         web. Here are 5 of them:
