--- a/02-HTML-Fundamentals/02-Solution Exercise/index.html
+++ b/02-HTML-Fundamentals/02-Solution Exercise/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="container">
       <header class="main-header">
-        <h1>📘 The Code Magazine</h1>
+        <h1 class="main-header-title">📘 The Code Magazine</h1>
         <nav>
           <a href="blog.html">Blog</a>
           <a href="#">Challenges</a>
