--- a/02-HTML-Fundamentals/02-Solution Exercise/index.html
+++ b/02-HTML-Fundamentals/02-Solution Exercise/index.html
@@ -21,6 +21,8 @@
       </header>
 
       <article>
+        <button>❤️ Like</button>
+
         <h2 class="article-header">The Basic Language of the Web: HTML</h2>
         <img
           src="img/laura-jones.jpg"
@@ -137,9 +139,5 @@
         </p>
       </footer>
     </div>
-
-    <button>
-      <p>❤️ Like</p>
-    </button>
   </body>
 </html>
