--- a/02-HTML-Fundamentals/02-Solution Exercise/challenge2.html
+++ b/02-HTML-Fundamentals/02-Solution Exercise/challenge2.html
@@ -11,6 +11,8 @@
     <div class="container-product">
       <article class="product">
         <h2 class="product-title">Converse Chuck Taylor All Star Low Top</h2>
+        <p class="sale-tab">SALE</p>
+
         <img
           src="https://i.ibb.co/Jr7Wh1d/challenges.jpg"
           alt="Chuck Taylor All Star Shoe"
@@ -27,6 +29,15 @@
           <a class="more-info" href="https://converse.com" target="_blank"
             >More information &rarr;</a
           >
+        </div>
+
+        <div class="color-boxes">
+          <div class="box-1"></div>
+          <div class="box-2"></div>
+          <div class="box-3"></div>
+          <div class="box-4"></div>
+          <div class="box-5"></div>
+          <div class="box-6"></div>
         </div>
         <h3 class="details-title">Product details</h3>
 
