--- a/02-HTML-Fundamentals/02-Solution Exercise/challenge2.html
+++ b/02-HTML-Fundamentals/02-Solution Exercise/challenge2.html
@@ -31,13 +31,13 @@
           >
         </div>
 
-        <div class="color-boxes">
-          <div class="box-1"></div>
-          <div class="box-2"></div>
-          <div class="box-3"></div>
-          <div class="box-4"></div>
-          <div class="box-5"></div>
-          <div class="box-6"></div>
+        <div class="colors">
+          <div class="color black-box"></div>
+          <div class="color blue-box"></div>
+          <div class="color red-box"></div>
+          <div class="color orange-box"></div>
+          <div class="color green-box"></div>
+          <div class="color brown-box"></div>
         </div>
         <h3 class="details-title">Product details</h3>
 
