--- a/02-HTML-Fundamentals/02-Solution Exercise/index.html
+++ b/02-HTML-Fundamentals/02-Solution Exercise/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <div class="container">
-      <header class="main-header">
+      <header class="main-header clearfix">
         <h1 class="main-header-title">📘 The Code Magazine</h1>
         <nav>
           <a href="blog.html">Blog</a>
