--- a/02-HTML-Fundamentals/02-Solution Exercise/index.html
+++ b/02-HTML-Fundamentals/02-Solution Exercise/index.html
@@ -67,7 +67,7 @@
           understand HTML and render HTML code as websites.
         </p>
         <p>In HTML, each element is made up of 3 parts:</p>
-        <ol>
+        <ol class="list">
           <li>The opening tag</li>
           <li>The closing tag</li>
           <li>The actual element</li>
@@ -86,7 +86,7 @@
           There are countless reasons for learning the fundamental language of
           the web. Here are 5 of them:
         </p>
-        <ul>
+        <ul class="list">
           <li>To be able to use the fundamental web dev language</li>
           <li>
             To hand-craft beautiful websites instead of relying on tools like
