--- a/02-HTML-Fundamentals/02-Solution Exercise/challenge2.html
+++ b/02-HTML-Fundamentals/02-Solution Exercise/challenge2.html
@@ -16,36 +16,41 @@
         <img
           src="https://i.ibb.co/Jr7Wh1d/challenges.jpg"
           alt="Chuck Taylor All Star Shoe"
-          width="250"
-          height="250"
+          class="img-product"
         />
-        <p class="price"><strong>$65.00</strong></p>
-        <p class="shipping">Free shipping</p>
-        <p>
-          Ready to dress up or down, these classic canvas Chucks are an everyday
-          wardrobe staple.
-        </p>
-        <div class="container-anchor">
-          <a class="more-info" href="https://converse.com" target="_blank"
-            >More information &rarr;</a
-          >
+
+        <div class="price-container">
+          <p class="price"><strong>$65.00</strong></p>
+          <p class="shipping">Free shipping</p>
+          <p class="product-description">
+            Ready to dress up or down, these classic canvas Chucks are an
+            everyday wardrobe staple.
+          </p>
+          <div class="container-anchor">
+            <a class="more-info" href="https://converse.com" target="_blank"
+              >More information &rarr;</a
+            >
+          </div>
+
+          <div class="colors">
+            <div class="color black-box"></div>
+            <div class="color blue-box"></div>
+            <div class="color red-box"></div>
+            <div class="color orange-box"></div>
+            <div class="color green-box"></div>
+            <div class="color brown-box"></div>
+          </div>
         </div>
 
-        <div class="colors">
-          <div class="color black-box"></div>
-          <div class="color blue-box"></div>
-          <div class="color red-box"></div>
-          <div class="color orange-box"></div>
-          <div class="color green-box"></div>
-          <div class="color brown-box"></div>
-        </div>
-        <h3 class="details-title">Product details</h3>
+        <div class="details-container">
+          <h3 class="details-title">Product details</h3>
 
-        <ul class="details-list">
-          <li>Lightweight, durable canvas sneaker</li>
-          <li>Lightly padded footbed for added comfort</li>
-          <li>Iconic Chuck Taylor ankle patch</li>
-        </ul>
+          <ul class="details-list">
+            <li>Lightweight, durable canvas sneaker</li>
+            <li>Lightly padded footbed for added comfort</li>
+            <li>Iconic Chuck Taylor ankle patch</li>
+          </ul>
+        </div>
 
         <button class="add-cart">Add to cart</button>
       </article>
