--- a/02-HTML-Fundamentals/02-Solution Exercise/blog.html
+++ b/02-HTML-Fundamentals/02-Solution Exercise/blog.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <h2>BLOG</h2>
-    <a href="index.html">Back to Home</a>
+    <a href="index-flexbox.html">Back to Home</a>
   </body>
 </html>
