--- a/02-HTML-Fundamentals/02-Solution Exercise/index-flexbox.html
+++ b/02-HTML-Fundamentals/02-Solution Exercise/index-flexbox.html
@@ -15,8 +15,8 @@
         <nav>
           <a href="blog.html">Blog</a>
           <a href="#">Challenges</a>
-          <a href="flexbox.html">Flexbox</a>
-          <a href="css-grid.html">CSS Grid</a>
+          <a href="flexbox.html" target="_blank">Flexbox</a>
+          <a href="css-grid.html" target="_blank">CSS Grid</a>
         </nav>
       </header>
 
