--- a/02-HTML-Fundamentals/02-Solution Exercise/index-flexbox.html
+++ b/02-HTML-Fundamentals/02-Solution Exercise/index-flexbox.html
@@ -22,16 +22,13 @@
 
       <article>
         <h2 class="article-header">The Basic Language of the Web: HTML</h2>
-        <img
-          src="img/laura-jones.jpg"
-          alt="Laura Jones"
-          width="50"
-          height="50"
-          class="author-img"
-        />
-        <p class="author-name">
-          Posted by <strong> Laura Jones</strong> on Monday, June 21st 2027
-        </p>
+
+        <div class="author-box">
+          <img src="img/laura-jones.jpg" alt="Laura Jones" class="author-img" />
+          <p class="author-name">
+            Posted by <strong> Laura Jones</strong> on Monday, June 21st 2027
+          </p>
+        </div>
 
         <img
           src="img/post-img.jpg"
