--- a/02-HTML-Fundamentals/02-Solution Exercise/challenge2.html
+++ b/02-HTML-Fundamentals/02-Solution Exercise/challenge2.html
@@ -11,45 +11,49 @@
     <div class="container-product">
       <article class="product">
         <h2 class="product-title">Converse Chuck Taylor All Star Low Top</h2>
+
+        <!-- === Button SALE must be defined inside the Relative Element === -->
         <p class="sale-tab">SALE</p>
 
-        <img
-          src="https://i.ibb.co/Jr7Wh1d/challenges.jpg"
-          alt="Chuck Taylor All Star Shoe"
-          class="img-product"
-        />
+        <div class="img-price-details">
+          <img
+            src="https://i.ibb.co/Jr7Wh1d/challenges.jpg"
+            alt="Chuck Taylor All Star Shoe"
+            class="img-product"
+          />
 
-        <div class="price-container">
-          <p class="price"><strong>$65.00</strong></p>
-          <p class="shipping">Free shipping</p>
-          <p class="product-description">
-            Ready to dress up or down, these classic canvas Chucks are an
-            everyday wardrobe staple.
-          </p>
-          <div class="container-anchor">
-            <a class="more-info" href="https://converse.com" target="_blank"
-              >More information &rarr;</a
-            >
+          <div class="price-container">
+            <p class="price"><strong>$65.00</strong></p>
+            <p class="shipping">Free shipping</p>
+            <p class="product-description">
+              Ready to dress up or down, these classic canvas Chucks are an
+              everyday wardrobe staple.
+            </p>
+            <div class="container-anchor">
+              <a class="more-info" href="https://converse.com" target="_blank"
+                >More information &rarr;</a
+              >
+            </div>
+
+            <div class="colors">
+              <div class="color black-box"></div>
+              <div class="color blue-box"></div>
+              <div class="color red-box"></div>
+              <div class="color orange-box"></div>
+              <div class="color green-box"></div>
+              <div class="color brown-box"></div>
+            </div>
           </div>
 
-          <div class="colors">
-            <div class="color black-box"></div>
-            <div class="color blue-box"></div>
-            <div class="color red-box"></div>
-            <div class="color orange-box"></div>
-            <div class="color green-box"></div>
-            <div class="color brown-box"></div>
+          <div class="details-container">
+            <h3 class="details-title">Product details</h3>
+
+            <ul class="details-list">
+              <li>Lightweight, durable canvas sneaker</li>
+              <li>Lightly padded footbed for added comfort</li>
+              <li>Iconic Chuck Taylor ankle patch</li>
+            </ul>
           </div>
-        </div>
-
-        <div class="details-container">
-          <h3 class="details-title">Product details</h3>
-
-          <ul class="details-list">
-            <li>Lightweight, durable canvas sneaker</li>
-            <li>Lightly padded footbed for added comfort</li>
-            <li>Iconic Chuck Taylor ankle patch</li>
-          </ul>
         </div>
 
         <button class="add-cart">Add to cart</button>
