--- a/02-HTML-Fundamentals/02-Solution Exercise/challenge2.html
+++ b/02-HTML-Fundamentals/02-Solution Exercise/challenge2.html
@@ -23,8 +23,11 @@
           />
 
           <div class="price-container">
-            <p class="price"><strong>$65.00</strong></p>
-            <p class="shipping">Free shipping</p>
+            <div class="price-n-shipping">
+              <p class="price"><strong>$65.00</strong></p>
+              <p class="shipping">Free shipping</p>
+            </div>
+
             <p class="product-description">
               Ready to dress up or down, these classic canvas Chucks are an
               everyday wardrobe staple.
