--- a/02-HTML-Fundamentals/02-Solution Exercise/css-grid.html
+++ b/02-HTML-Fundamentals/02-Solution Exercise/css-grid.html
@@ -14,7 +14,7 @@
       }
       .el--3 {
         background-color: green;
-        height: 150px;
+        /* height: 150px; */
       }
       .el--4 {
         background-color: goldenrod;
@@ -27,9 +27,11 @@
       }
       .el--7 {
         background-color: yellow;
+        display: none;
       }
       .el--8 {
         background-color: crimson;
+        grid-column: 3 / 5;
       }
 
       .container--1 {
@@ -38,12 +40,12 @@
         background-color: #ddd;
         font-size: 30px;
         margin: 40px;
-        height: 500px;
+        height: 300px;
 
         /* CSS GRID */
         display: grid;
-        grid-template-columns: 100px 100px 200px 200px;
-        grid-template-rows: 200px 200px;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: 1fr 1fr;
       }
 
       .container--2 {
