--- a/02-HTML-Fundamentals/02-Solution Exercise/css-grid.html
+++ b/02-HTML-Fundamentals/02-Solution Exercise/css-grid.html
@@ -31,7 +31,8 @@
       }
       .el--8 {
         background-color: crimson;
-        grid-column: 3 / 5;
+        grid-column: 1 / 2;
+        grid-row: 1 / 2;
       }
 
       .container--1 {
