--- a/02-HTML-Fundamentals/02-Solution Exercise/css-grid.html
+++ b/02-HTML-Fundamentals/02-Solution Exercise/css-grid.html
@@ -11,6 +11,8 @@
       }
       .el--2 {
         background-color: orangered;
+        grid-column: 3 / span 1;
+        grid-row: 1 / span 2;
       }
       .el--3 {
         background-color: green;
@@ -24,6 +26,7 @@
       }
       .el--6 {
         background-color: steelblue;
+        display: none;
       }
       .el--7 {
         background-color: yellow;
@@ -32,7 +35,7 @@
       .el--8 {
         background-color: crimson;
         grid-column: 1 / 2;
-        grid-row: 1 / 2;
+        grid-row: 1 / 3;
       }
 
       .container--1 {
