--- a/02-HTML-Fundamentals/02-Solution Exercise/css-grid.html
+++ b/02-HTML-Fundamentals/02-Solution Exercise/css-grid.html
@@ -11,8 +11,8 @@
       }
       .el--2 {
         background-color: orangered;
-        grid-column: 3 / span 1;
-        grid-row: 1 / span 2;
+        /* grid-column: 3 / span 1;
+        grid-row: 1 / span 2; */
       }
       .el--3 {
         background-color: green;
@@ -34,8 +34,7 @@
       }
       .el--8 {
         background-color: crimson;
-        grid-column: 1 / 2;
-        grid-row: 1 / 3;
+        grid-column: 2 / span 3;
       }
 
       .container--1 {
