--- a/02-HTML-Fundamentals/02-Solution Exercise/css-grid.html
+++ b/02-HTML-Fundamentals/02-Solution Exercise/css-grid.html
@@ -48,7 +48,10 @@
         /* CSS GRID */
         display: grid;
         grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: 1fr 2fr;
+        grid-template-rows: 1fr 1fr;
+
+        row-gap: 30px;
+        column-gap: 15px;
       }
 
       .container--2 {
