--- a/02-HTML-Fundamentals/02-Solution Exercise/css-grid.html
+++ b/02-HTML-Fundamentals/02-Solution Exercise/css-grid.html
@@ -16,7 +16,7 @@
       }
       .el--3 {
         background-color: green;
-        /* height: 150px; */
+        height: 150px;
       }
       .el--4 {
         background-color: goldenrod;
@@ -26,15 +26,15 @@
       }
       .el--6 {
         background-color: steelblue;
-        display: none;
+        /* display: none; */
       }
       .el--7 {
         background-color: yellow;
-        display: none;
+        /* display: none; */
       }
       .el--8 {
         background-color: crimson;
-        grid-column: 2 / span 3;
+        /* grid-column: 2 / span 3; */
       }
 
       .container--1 {
@@ -52,20 +52,24 @@
 
         row-gap: 30px;
         column-gap: 15px;
+
+        display: none;
       }
 
       .container--2 {
         /* STARTER */
-        display: none;
         font-family: sans-serif;
         background-color: black;
-        font-size: 40px;
-        margin: 100px;
+        font-size: 30px;
+        margin: 40px;
 
-        width: 1000px;
-        height: 600px;
+        width: 700px;
+        height: 500px;
 
         /* CSS GRID */
+        display: grid;
+        grid-template-columns: 100px 150px 100px;
+        grid-template-rows: 200px 100px;
       }
     </style>
   </head>
