--- a/02-HTML-Fundamentals/02-Solution Exercise/css-grid.html
+++ b/02-HTML-Fundamentals/02-Solution Exercise/css-grid.html
@@ -31,6 +31,8 @@
       .el--7 {
         background-color: yellow;
         /* display: none; */
+        align-self: flex-start;
+        justify-self: flex-start;
       }
       .el--8 {
         background-color: crimson;
@@ -70,6 +72,14 @@
         display: grid;
         grid-template-columns: 100px 150px 100px;
         grid-template-rows: 200px 100px;
+        row-gap: 35px;
+        column-gap: 20px;
+
+        justify-content: center;
+        align-content: center;
+
+        align-items: center;
+        justify-items: center;
       }
     </style>
   </head>
