GRID self-stretch

--- a/02-HTML-Fundamentals/02-Solution Exercise/css-grid.html
+++ b/02-HTML-Fundamentals/02-Solution Exercise/css-grid.html
@@ -23,6 +23,8 @@
       }
       .el--5 {
         background-color: palevioletred;
+        align-self: stretch;
+        justify-self: stretch;
       }
       .el--6 {
         background-color: steelblue;
