--- a/02-HTML-Fundamentals/02-Solution Exercise/challenge2.html
+++ b/02-HTML-Fundamentals/02-Solution Exercise/challenge2.html
@@ -16,11 +16,13 @@
         <p class="sale-tab">SALE</p>
 
         <!-- <div class="img-price-details"> -->
-        <img
-          src="https://i.ibb.co/Jr7Wh1d/challenges.jpg"
-          alt="Chuck Taylor All Star Shoe"
-          class="img-product"
-        />
+        <div class="img-container">
+          <img
+            src="https://i.ibb.co/Jr7Wh1d/challenges.jpg"
+            alt="Chuck Taylor All Star Shoe"
+            class="img-product"
+          />
+        </div>
 
         <div class="price-container">
           <div class="price-n-shipping">
