--- a/06-Components/01-accordion.html
+++ b/06-Components/01-accordion.html
@@ -33,7 +33,45 @@
         font-family: "Inter", sans-serif;
         color: #343a40;
       }
+
+      .accordion {
+        width: 700px;
+        margin: 100px auto;
+      }
     </style>
   </head>
-  <body></body>
+  <body>
+    <div class="accordion">
+      <p class="number">02</p>
+      <p class="text">How long do I have to return my chair?</p>
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke-width="1.5"
+        stroke="currentColor"
+        class="icon"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          d="M19.5 8.25l-7.5 7.5-7.5-7.5"
+        />
+      </svg>
+      <div class="hidden-box">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique,
+          eveniet cum. Ab nemo, magnam temporibus, suscipit officiis corrupti
+          asperiores blanditiis quasi, tempore maxime cupiditate recusandae
+          distinctio porro error cum nihil?
+        </p>
+        <ul>
+          <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+          <li>Fugit enim voluptate quae excepturi at recusandae.</li>
+          <li>Maxime libero error inventore odio reiciendis!</li>
+          <li>Iure dolor, similique adipisci et nemo natus ab eius?</li>
+        </ul>
+      </div>
+    </div>
+  </body>
 </html>
