--- a/06-Components/01-accordion.html
+++ b/06-Components/01-accordion.html
@@ -32,45 +32,81 @@
       body {
         font-family: "Inter", sans-serif;
         color: #343a40;
+        line-height: 1;
       }
 
       .accordion {
         width: 700px;
         margin: 100px auto;
       }
+
+      .item {
+      }
+
+      .number,
+      .text {
+        font-size: 24px;
+        font-weight: 500;
+        color: #087f5b;
+      }
+
+      .text {
+      }
+
+      .icon {
+        width: 24px;
+        height: 24px;
+        stroke: #087f5b;
+      }
+
+      .hidden-box p {
+        line-height: 1.6;
+        margin-bottom: 24px;
+      }
+
+      .hidden-box ul {
+        margin-left: 20px;
+        color: #868e96;
+
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+      }
     </style>
   </head>
   <body>
     <div class="accordion">
-      <p class="number">02</p>
-      <p class="text">How long do I have to return my chair?</p>
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        fill="none"
-        viewBox="0 0 24 24"
-        stroke-width="1.5"
-        stroke="currentColor"
-        class="icon"
-      >
-        <path
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          d="M19.5 8.25l-7.5 7.5-7.5-7.5"
-        />
-      </svg>
-      <div class="hidden-box">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique,
-          eveniet cum. Ab nemo, magnam temporibus, suscipit officiis corrupti
-          asperiores blanditiis quasi, tempore maxime cupiditate recusandae
-          distinctio porro error cum nihil?
-        </p>
-        <ul>
-          <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-          <li>Fugit enim voluptate quae excepturi at recusandae.</li>
-          <li>Maxime libero error inventore odio reiciendis!</li>
-          <li>Iure dolor, similique adipisci et nemo natus ab eius?</li>
-        </ul>
+      <div class="item">
+        <p class="number">02</p>
+        <p class="text">How long do I have to return my chair?</p>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="icon"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M19.5 8.25l-7.5 7.5-7.5-7.5"
+          />
+        </svg>
+        <div class="hidden-box">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique,
+            eveniet cum. Ab nemo, magnam temporibus, suscipit officiis corrupti
+            asperiores blanditiis quasi, tempore maxime cupiditate recusandae
+            distinctio porro error cum nihil?
+          </p>
+          <ul>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+            <li>Fugit enim voluptate quae excepturi at recusandae.</li>
+            <li>Maxime libero error inventore odio reiciendis!</li>
+            <li>Iure dolor, similique adipisci et nemo natus ab eius?</li>
+          </ul>
+        </div>
       </div>
     </div>
   </body>
