--- a/06-Components/01-accordion.html
+++ b/06-Components/01-accordion.html
@@ -41,9 +41,11 @@
       }
 
       .item {
+        box-shadow: 0 0 32px rgba(0, 0, 0, 0.15);
+        padding: 24px;
         display: grid;
         grid-template-columns: auto 1fr auto;
-        column-gap: 32px;
+        column-gap: 24px;
         row-gap: 32px;
       }
 
@@ -52,9 +54,6 @@
         font-size: 24px;
         font-weight: 500;
         color: #087f5b;
-      }
-
-      .text {
       }
 
       .hidden-box {
@@ -84,8 +83,74 @@
   <body>
     <div class="accordion">
       <div class="item">
+        <p class="number">01</p>
+        <p class="text">Line 01</p>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="icon"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M19.5 8.25l-7.5 7.5-7.5-7.5"
+          />
+        </svg>
+        <div class="hidden-box">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique,
+            eveniet cum. Ab nemo, magnam temporibus, suscipit officiis corrupti
+            asperiores blanditiis quasi, tempore maxime cupiditate recusandae
+            distinctio porro error cum nihil?
+          </p>
+          <ul>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+            <li>Fugit enim voluptate quae excepturi at recusandae.</li>
+            <li>Maxime libero error inventore odio reiciendis!</li>
+            <li>Iure dolor, similique adipisci et nemo natus ab eius?</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="item">
         <p class="number">02</p>
         <p class="text">How long do I have to return my chair?</p>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="icon"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M19.5 8.25l-7.5 7.5-7.5-7.5"
+          />
+        </svg>
+        <div class="hidden-box">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique,
+            eveniet cum. Ab nemo, magnam temporibus, suscipit officiis corrupti
+            asperiores blanditiis quasi, tempore maxime cupiditate recusandae
+            distinctio porro error cum nihil?
+          </p>
+          <ul>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+            <li>Fugit enim voluptate quae excepturi at recusandae.</li>
+            <li>Maxime libero error inventore odio reiciendis!</li>
+            <li>Iure dolor, similique adipisci et nemo natus ab eius?</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="item">
+        <p class="number">01</p>
+        <p class="text">Line 03</p>
         <svg
           xmlns="http://www.w3.org/2000/svg"
           fill="none"
