--- a/06-Components/01-accordion.html
+++ b/06-Components/01-accordion.html
@@ -57,12 +57,18 @@
       .text {
         font-size: 24px;
         font-weight: 500;
-        color: #087f5b;
+        /* color: #087f5b; */
+      }
+
+      .number {
+        color: #ced4da;
       }
 
       .hidden-box {
         grid-column: 2;
+        display: none;
       }
+
       .icon {
         width: 24px;
         height: 24px;
@@ -81,6 +87,19 @@
         display: flex;
         flex-direction: column;
         gap: 12px;
+      }
+
+      .open {
+        border-top: 4px solid #087f5b;
+      }
+
+      .open .hidden-box {
+        display: block;
+      }
+
+      .open .number,
+      .open .text {
+        color: #087f5b;
       }
     </style>
   </head>
@@ -105,10 +124,9 @@
         </svg>
         <div class="hidden-box">
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique,
-            eveniet cum. Ab nemo, magnam temporibus, suscipit officiis corrupti
-            asperiores blanditiis quasi, tempore maxime cupiditate recusandae
-            distinctio porro error cum nihil?
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            Accusantium dolor at sequi obcaecati cupiditate. Voluptates
+            repellendus cupiditate aperiam! Incidunt amet quo neque.
           </p>
           <ul>
             <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
@@ -119,7 +137,7 @@
         </div>
       </div>
 
-      <div class="item">
+      <div class="item open">
         <p class="number">02</p>
         <p class="text">How long do I have to return my chair?</p>
         <svg
@@ -138,10 +156,9 @@
         </svg>
         <div class="hidden-box">
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique,
-            eveniet cum. Ab nemo, magnam temporibus, suscipit officiis corrupti
-            asperiores blanditiis quasi, tempore maxime cupiditate recusandae
-            distinctio porro error cum nihil?
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            Accusantium dolor at sequi obcaecati cupiditate. Voluptates
+            repellendus cupiditate aperiam! Incidunt amet quo neque.
           </p>
           <ul>
             <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
@@ -171,10 +188,9 @@
         </svg>
         <div class="hidden-box">
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique,
-            eveniet cum. Ab nemo, magnam temporibus, suscipit officiis corrupti
-            asperiores blanditiis quasi, tempore maxime cupiditate recusandae
-            distinctio porro error cum nihil?
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            Accusantium dolor at sequi obcaecati cupiditate. Voluptates
+            repellendus cupiditate aperiam! Incidunt amet quo neque.
           </p>
           <ul>
             <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
