--- a/06-Components/01-accordion.html
+++ b/06-Components/01-accordion.html
@@ -78,6 +78,7 @@
       .hidden-box p {
         line-height: 1.6;
         margin-bottom: 24px;
+        font-weight: 500;
       }
 
       .hidden-box ul {
