--- a/06-Components/02-carousel.html
+++ b/06-Components/02-carousel.html
@@ -23,6 +23,7 @@
       MAIN COLOR: #087f5b
       DARK GREY COLOR: #343a40
       LIGHT GREY COLOR: #868e96
+      LIGHT GREEN COLOR: #e6fcf5
       */
 
       * {
@@ -36,11 +37,94 @@
         color: #343a40;
         line-height: 1;
       }
+
+      .carousel {
+        width: 800px;
+        margin: 100px auto;
+        background-color: #087f5b;
+        color: #e6fcf5;
+
+        border-radius: 8px;
+        display: flex;
+        gap: 24px;
+
+        padding: 32px 32px 32px 86px;
+      }
+
+      img {
+        height: 200px;
+        border-radius: 8px;
+        transform: scale(1.5);
+      }
+
+      .testimonial {
+      }
+
+      .testimonial-text {
+        font-size: 18px;
+        font-weight: 500;
+        line-height: 1.5;
+        margin-bottom: 32px;
+      }
+
+      .testimonial-author {
+        font-size: 14px;
+        margin-bottom: 4px;
+      }
+
+      .testimonial-job {
+        font-size: 12px;
+      }
     </style>
   </head>
+
   <body>
     <div class="carousel">
       <img src="maria.jpg" alt="Maria de Almeida" />
+
+      <blockquote class="testimonial">
+        <p class="testimonial-text">
+          "Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia
+          nesciunt aliquid ex atque quibusdam. Rerum officia unde suscipit quo
+          sunt hic illo fugit."
+        </p>
+        <p class="testimonial-author">Maria de Almeida</p>
+        <p class="testimonial-job">Senior Product Manager at EDP Comercial</p>
+      </blockquote>
+
+      <button class="btn">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="left"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M15.75 19.5L8.25 12l7.5-7.5"
+          />
+        </svg>
+      </button>
+
+      <button class="btn">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="right"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M8.25 4.5l7.5 7.5-7.5 7.5"
+          />
+        </svg>
+      </button>
     </div>
   </body>
 </html>
