--- a/06-Components/02-carousel.html
+++ b/06-Components/02-carousel.html
@@ -139,7 +139,7 @@
         cursor: pointer;
       }
 
-      .dot:first-child {
+      .dot-fill {
         background-color: #087f5b;
       }
     </style>
@@ -194,7 +194,7 @@
       </button>
 
       <div class="dots">
-        <button class="dot">&nbsp;</button>
+        <button class="dot dot-fill">&nbsp;</button>
         <button class="dot">&nbsp;</button>
         <button class="dot">&nbsp;</button>
         <button class="dot">&nbsp;</button>
