--- a/06-Components/04-pagination.html
+++ b/06-Components/04-pagination.html
@@ -93,6 +93,7 @@
       .btn:hover {
         background-color: #087f5b;
         color: #fff;
+        cursor: pointer;
       }
     </style>
   </head>
