--- a/06-Components/04-pagination.html
+++ b/06-Components/04-pagination.html
@@ -77,17 +77,21 @@
         justify-content: center;
       }
 
+      .page-link:hover,
+      .page-link:active {
+        border-radius: 50%;
+        background-color: #087f5b;
+        color: #fff;
+      }
+
       .page-link:nth-child(4) {
         border-radius: 50%;
         background-color: #087f5b;
         color: #fff;
       }
 
-      .page-link:hover,
-      .page-link:active {
-        border-radius: 50%;
-        background-color: #087f5b;
-        color: #fff;
+      .dots {
+        color: #087f5b;
       }
 
       .btn:hover {
