--- a/06-Components/05-hero.html
+++ b/06-Components/05-hero.html
@@ -44,12 +44,20 @@
         font-weight: 700;
         display: flex;
         justify-content: space-between;
+        padding-top: 32px;
       }
 
       header {
         height: 100vh;
-        padding-top: 32px;
         position: relative;
+        color: #fff;
+
+        background-image: linear-gradient(
+            rgba(34, 34, 34, 0.6),
+            rgba(34, 34, 34, 0.6)
+          ),
+          url(hero.jpg);
+        background-size: cover;
       }
 
       .header-container {
@@ -68,6 +76,7 @@
       h1 {
         font-size: 52px;
         margin-bottom: 32px;
+        line-height: 1.05;
       }
 
       p {
