--- a/06-Components/06-app-layout.html
+++ b/06-Components/06-app-layout.html
@@ -41,6 +41,12 @@
         grid-row: 1 / -1;
       }
 
+      button {
+        font-size: 16px;
+        background-color: #7048e8;
+        border: none;
+        cursor: pointer;
+      }
       menu {
         background-color: #7048e8;
         color: #fff;
@@ -59,7 +65,12 @@
 
   <body>
     <nav>Nav</nav>
-    <menu>Menu</menu>
+    <menu>
+      <button>New</button>
+      <button>Reply</button>
+      <button>Forvard</button>
+      <button>Mark unread</button>
+    </menu>
     <section>Inbox</section>
     <main>Email view</main>
     <aside>Additional info</aside>
