--- a/07-Omnifood-Desktop/index.html
+++ b/07-Omnifood-Desktop/index.html
@@ -86,7 +86,7 @@
       </section>
 
       <section class="section-how">
-        <div class="grid container">
+        <div class="grid container grid--2--cols">
           <div>Test 1</div>
           <div>Test 2</div>
           <div>Test 3</div>
