--- a/07-Omnifood-Desktop/index.html
+++ b/07-Omnifood-Desktop/index.html
@@ -317,8 +317,9 @@
 
             <blockquote class="testimonial-text">
               Inexpensive, healthy and great-tasting meals, without even having
-              to order manually! It feels truly magical. (Dave Bryson)
+              to order manually! It feels truly magical.
             </blockquote>
+            <p class="testimonial-name">Dave Bryson</p>
           </figure>
         </div>
         <div class="gallery">Gallery</div>
