--- a/07-Omnifood-Desktop/index.html
+++ b/07-Omnifood-Desktop/index.html
@@ -540,9 +540,15 @@
       </section>
 
       <section class="section-cta">
-        <div class="container cta">
-          <div class="cta-text-box">CTA</div>
-          <div class="cta-img-box">Image</div>
+        <div class="container">
+          <div class="cta">
+            <div class="cta-text-box">CTA</div>
+            <div
+              class="cta-img-box"
+              role="img"
+              aria-level="Woman enjoying food"
+            ></div>
+          </div>
         </div>
       </section>
     </main>
