--- a/07-Omnifood-Desktop/index.html
+++ b/07-Omnifood-Desktop/index.html
@@ -63,10 +63,10 @@
               nutritional needs.
             </p>
 
-            <a href="#" class="btn bnt-ful margin-right-sm"
+            <a href="#" class="btn btn-ful margin-right-sm"
               >Start eating well</a
             >
-            <a href="#" class="btn bnt-outline">Learn more &darr;</a>
+            <a href="#" class="btn btn-outline">Learn more &darr;</a>
 
             <div class="delivered-meals">
               <div class="delivered-imgs">
@@ -455,7 +455,7 @@
             </ul>
 
             <div class="plan-sing-up">
-              <a href="#" class="btn bnt-ful">Start eating well</a>
+              <a href="#" class="btn btn-ful">Start eating well</a>
             </div>
           </div>
 
@@ -488,7 +488,7 @@
             </ul>
 
             <div class="plan-sing-up">
-              <a href="#" class="btn bnt-ful">Start eating well</a>
+              <a href="#" class="btn btn-ful">Start eating well</a>
             </div>
           </div>
         </div>
@@ -584,7 +584,7 @@
                   </select>
                 </div>
 
-                <button class="btn">Sing up now</button>
+                <button class="btn btn--form">Sing up now</button>
               </form>
             </div>
             <div
