--- a/09-Omnifood-Optimizations/index.html
+++ b/09-Omnifood-Optimizations/index.html
@@ -75,7 +75,7 @@
               nutritional needs.
             </p>
 
-            <a href="#" class="btn btn-ful margin-right-sm"
+            <a href="#cta" class="btn btn-ful margin-right-sm"
               >Start eating well</a
             >
             <a href="#" class="btn btn-outline">Learn more &darr;</a>
@@ -125,7 +125,7 @@
         </div>
       </section>
 
-      <section class="section-how">
+      <section class="section-how" id="how">
         <div class="container">
           <span class="subheading">How it works</span>
           <h2 class="heading-secondary">
@@ -196,7 +196,7 @@
         </div>
       </section>
 
-      <section class="section-meals">
+      <section class="section-meals" id="meals">
         <div class="container">
           <span class="subheading">Meals</span>
           <h2 class="heading-secondary">
@@ -318,7 +318,7 @@
         </div>
       </section>
 
-      <section class="section-testimonials">
+      <section class="section-testimonials" id="testimonials">
         <div class="testimonials-container">
           <span class="subheading">Testimonials</span>
           <h2 class="heading-secondary">Once you try it, you can't go back</h2>
@@ -551,7 +551,7 @@
         </div>
       </section>
 
-      <section class="section-cta">
+      <section class="section-cta" id="cta">
         <div class="container">
           <div class="cta">
             <div class="cta-text-box">
