--- a/09-Omnifood-Optimizations/index.html
+++ b/09-Omnifood-Optimizations/index.html
@@ -26,6 +26,12 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+
+    <script
+      defer
+      src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"
+    ></script>
+
     <script defer src="js/script.js"></script>
     <title>Omnifood</title>
   </head>
@@ -78,7 +84,7 @@
             <a href="#cta" class="btn btn-ful margin-right-sm"
               >Start eating well</a
             >
-            <a href="#" class="btn btn-outline">Learn more &darr;</a>
+            <a href="#how" class="btn btn-outline">Learn more &darr;</a>
 
             <div class="delivered-meals">
               <div class="delivered-imgs">
