--- a/09-Omnifood-Optimizations/index.html
+++ b/09-Omnifood-Optimizations/index.html
@@ -37,7 +37,7 @@
   </head>
 
   <body>
-    <header class="header sticky">
+    <header class="header">
       <a href="#">
         <img src="img/omnifood-logo.png" alt="Omnifood logo" class="logo" />
       </a>
