--- a/09-Omnifood-Optimizations/index.html
+++ b/09-Omnifood-Optimizations/index.html
@@ -7,6 +7,13 @@
     <!-- Always INCLUDE this line of code -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <meta
+      name="Description"
+      content="This short description appears as a result of search engines."
+    />
+
+    <link rel="icon" href="img/favicon-small.png" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -33,7 +40,7 @@
     ></script>
 
     <script defer src="js/script.js"></script>
-    <title>Omnifood</title>
+    <title>Omnifood &dash; The right food</title>
   </head>
 
   <body>
