--- a/09-Omnifood-Optimizations/index.html
+++ b/09-Omnifood-Optimizations/index.html
@@ -480,7 +480,7 @@
             </ul>
 
             <div class="plan-sing-up">
-              <a href="#" class="btn btn-ful">Start eating well</a>
+              <a href="#cta" class="btn btn-ful">Start eating well</a>
             </div>
           </div>
 
@@ -513,7 +513,7 @@
             </ul>
 
             <div class="plan-sing-up">
-              <a href="#" class="btn btn-ful">Start eating well</a>
+              <a href="#cta" class="btn btn-ful">Start eating well</a>
             </div>
           </div>
         </div>
